feat: add interactivity for the index page; fix: improve class and id names

--- a/coffee-house/styles/index.css
+++ b/coffee-house/styles/index.css
@@ -15,6 +15,7 @@ html {
   --text-light: #E1D4C9;
   --background-body: #E1D4C9;
   --background-container: #665F55;
+  --background-backdrop: rgba(64, 63, 61, 0.80);
   --border-dark: #665F55;
   --border-light: #C1B6AD; 
 }
@@ -31,12 +32,9 @@ body {
   width: 1440px;
   min-height: 100%;
   margin: 0 auto;
+  padding: 20px 40px 40px 40px;
   display: flex;
   flex-flow: column nowrap;
-}
-
-.main {
-  flex-grow: 1;
 }
 
 .header_container {
@@ -44,111 +42,161 @@ body {
   flex-flow: row nowrap;
   justify-content: space-between;
   align-items: center;
-  margin: 20px 0;
-  padding: 0 40px;
+  width: 100%;
+  margin-bottom: 20px;
 }
 
-.nav_menu {
+.nav_list {
   display: flex;
   flex-flow: row nowrap;
-  align-items: center;
+  align-items: baseline;
   gap: 40px;
   list-style-type: none;
-  margin-bottom: 6px;  
+  margin-bottom: 7px; 
 }
 
-.nav_menu_item-link {
+.nav_list-item {
   position: relative;
+}
+
+.nav_list-item_link {
   text-decoration: none;
   color: var(--text-dark);
   font-size: 16px;
   font-weight: 600;
-  line-height: 150%;
 }
 
-.nav_menu_item-link::after, .nav_coffee-menu::after {
+.nav_list-item::after{
   content: "";
   position: absolute;
   width: 100%;
   height: 2px;
-  bottom: -4px;
-  left: 50%;
-  transform: translate(-50%, 0%);
+  bottom: -6px;
   background-color: var(--text-dark);
+  left: 0%; 
   opacity: 0;
+  transition: opacity 0.3s ease-in-out;
 }
 
-.nav_coffee-menu {
+.nav_list-item:hover::after {
+  opacity: 1;
+}
+
+.nav_menu-link {
   display: flex;
-  align-items: center;
+  align-items: flex-end;
   position: relative;
-  margin-bottom: 6px;
-}
-
-.nav_coffee-menu a {
   text-decoration: none;
   color: var(--text-dark);
   font-size: 16px;
   font-weight: 600;
-  line-height: 150%;
+  line-height: 100%;
+  margin-bottom: 12px;
 }
 
-.nav_coffee-menu img {
+.nav_menu-link::after{
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  bottom: -8px;
+  background-color: var(--text-dark);
+  left: 0%; 
+  opacity: 0;
+  transition: opacity 0.3s ease-in-out;
+}
+
+.nav_menu-link img {
   margin-left: 8px;
+}
+
+.nav_menu-link:hover::after {
+  opacity: 1;
+}
+
+/* ---------- Enjoy section ---------- */
+
+.main {
+  flex-grow: 1;
 }
 
 .enjoy_container {
   display: flex;
   flex-flow: column nowrap;
   gap: 40px;
-  max-width: 1360px;
-  margin: 0 40px;
+  width: 100%;
   padding: 100px;
   background: url("../images/enjoy_background.svg") center center / cover no-repeat;
   border-radius: 40px;
-  border: none;
 }
 
-.enjoy_heading {
+h1 {
   max-width: 530px;
   color: var(--text-light);
   font-size: 72px;
   font-weight: 600;
   line-height: 105%;
+  text-align: left;
 }
 
-.enjoy_heading span {
+h1 span {
   color: var(--text-accent);
   font-style: italic;
 }
 
-.enjoy_text {
-  max-width: 530px;
+.enjoy_container p {
   color: var(--text-light);
   font-size: 16px;
   font-weight: 400;
   line-height: 150%;
+  text-align: left;
 }
 
-.enjoy_menu-button {
-  height: 64px;
-  width: 200px;
-  padding: 20px 78px;
-  border: none;
-  border-radius: 100px;
+.enjoy_button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-decoration: none;
   background: var(--background-body);
-  color: var(--text-dark);
+  width: 200px;
+  padding: 20px 0;
+  border-radius: 100px;
   text-align: center;
+}
+
+.enjoy_button-text {
+  position: relative;
+  transition: transform 0.5s ease-in-out;
+  color: var(--text-dark);  
   font-size: 16px;
   font-weight: 600;
   line-height: 150%;
 }
 
+.enjoy_button-text::after {
+  content: url(../images/coffee-cup-icon.svg);
+  position: absolute;
+  top: 0px;
+  right: -28px;
+  opacity: 0;
+  transition: opacity 0.5s ease-in-out;
+}
+
+.enjoy_button:hover > .enjoy_button-text {
+  transform: translateX(-14px);
+}
+
+.enjoy_button:hover > .enjoy_button-text::after {
+  opacity: 1;
+}
+
+/* ---------- Favourite Coffee section ---------- */
+
 .favourite-coffee {
   display: flex;
   flex-flow: column nowrap;
   align-items: center;
-  margin: 100px 40px 0 40px;
+  margin-top: 100px;
 }
 
 h2 { /* Sections Favourite-coffee, About, Mobile app */
@@ -168,8 +216,34 @@ h2 > span {
   display: flex;
   flex-flow: row nowrap;
   justify-content: space-between;
+  align-items: center;
   width: 100%;
   margin-top: 40px;
+}
+
+.carousel_arrow svg{
+  width: 60px;
+  height: 60px;
+  padding: 18px;
+  border: 1px solid var(--border-dark);
+  border-radius: 100px;
+  transition: background-color 0.4s ease-in-out;
+}
+
+.carousel_arrow svg path{
+  transition: stroke 0.4s ease-in-out;
+}
+
+.carousel_arrow:hover {
+  cursor: pointer;
+}
+
+.carousel_arrow:hover > svg {
+  background-color: var(--background-container);
+}
+
+.carousel_arrow:hover > svg > path{
+  stroke: var(--text-light);
 }
 
 .carousel_slide {
@@ -196,7 +270,7 @@ h2 > span {
   line-height: 150%;
 }
 
-.carousel_slide_price {
+.carousel_slide span {
   margin-top: 16px;
   color: var(--text-dark);
   text-align: center;
@@ -224,10 +298,13 @@ h2 > span {
   background-color: var(--border-dark);
 }
 
+/* ---------- About section ---------- */
+
 .about {
   display: flex;
   flex-flow: column nowrap;
-  margin: 100px 40px 0 40px;
+  align-items: center;
+  margin-top: 100px;
 }
 
 .about_gallery {
@@ -267,17 +344,26 @@ h2 > span {
 .about_gallery_photo img {
   width: 726px;
   height: 726px;
+  transition: width 0.4s ease-in-out, 
+    height 0.5s ease-in-out;
 }
+
+.about_gallery_photo:hover > img {
+  width: 660px;
+  height: 660px;
+}
+
+/* ---------- Mobile App section ---------- */
 
 .mobile-app {
   display: flex;
   flex-flow: row nowrap;
   justify-content: space-between;
   align-items: center;
-  margin: 100px 40px 0 40px;
+  margin-top: 100px;
 }
 
-.mobile-app img {
+.mobile-app_image {
   width: 630px;
   height: 630px;
 }
@@ -301,28 +387,77 @@ h2 > span {
 .buy-app_buttons {
   display: flex;
   flex-flow: row nowrap;
+  justify-content: flex-start;
+  align-items: center;
   gap: 20px;
 }
 
-.appstore-button img,
-.googleplay-button img {
+.buy-app_link {
+  text-decoration: none;
   width: 200px;
   height: 64px;
+  display: flex;
+  flex-flow: row nowrap;
+  align-items: center;
+  justify-content: flex-start;
+  gap: 8px;
+  padding: 12px 20px;
+  border-radius: 100px;
+  border: 1px solid var(--border-dark);
+  transition: background-color 0.4s ease-in-out;
 }
+
+.buy-app_link svg path{
+  transition: fill 0.4s ease-in-out;
+}
+
+.buy-app_link_text {
+  display: flex;
+  flex-flow: column nowrap;
+  justify-content: center;
+  align-items: flex-start;
+  color: var(--text-dark);
+  font-weight: 600;
+  transition: color 0.4s ease-in-out;
+}
+
+.buy-app_link_text span:first-child {
+  font-size: 10px;
+  line-height: 140%;
+}
+
+.buy-app_link_text span:nth-child(2) {
+  font-size: 16px;
+  line-height: 150%;
+}
+
+.buy-app_link:hover {
+  background-color: var(--background-container);
+}
+
+.buy-app_link:hover > .buy-app_link_text {
+  color: var(--text-light);
+}
+
+.buy-app_link:hover > svg > path {
+  fill: var(--text-light);
+}
+
+/* ---------- Footer ---------- */
 
 .footer_container {
   display: flex;
   flex-flow: row nowrap;
   align-items: center;
   gap: 100px;
-  margin: 100px 40px 40px 40px;
+  margin-top: 100px;
   padding: 100px;
   background-color: var(--background-container);
   border: none;
   border-radius: 40px;
 }
 
-.social-media {
+.footer_social-media {
   display: flex;
   flex-flow: column nowrap;
   align-items: flex-start;
@@ -331,46 +466,104 @@ h2 > span {
   justify-content: space-between;
 }
 
-h2.footer_slogan {
+.footer_social-media h2 {
   color: var(--text-light);
 }
 
-.social-media ul {
+.footer_social-media ul {
   display: flex;
   flex-flow: row nowrap;
   gap: 12px;
   list-style-type: none;
-
 }
 
-.contacts {
+.footer_social-media_link {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 60px;
+  height: 60px;
+  padding: 18px;
+  border-radius: 100px;
+  border: 1px solid var(--border-light);
+  transition: background-color 0.4s ease-in-out;
+}
+
+.footer_social-media_link:hover {
+  background-color: var(--background-body);
+}
+
+.footer_social-media_link svg path{
+  transition: stroke 0.4s ease-in-out;
+}
+
+.footer_social-media_link:hover > svg > path {
+  stroke: var(--text-dark);
+}
+
+.footer_contacts {
   display: flex;
   flex-flow: column nowrap;
   align-items: flex-start;
-  flex-grow: 1;
-  list-style-type: none;
+  justify-content: center;
+  align-self: stretch;
 }
 
-.contacts li {
-  margin-top: 16px;
-}
-
-.contacts_title {
+.footer_contacts h3 {
   color: var(--text-light);
   font-size: 24px;
   font-weight: 600;
   line-height: 125%;
-  margin-bottom: 24px;
+  margin-bottom: 40px;
 }
 
-.contact_link {
+.footer_contacts ul {
+  list-style-type: none;
+  display: flex;
+  flex-flow: column nowrap;
+  gap: 16px;
+}
+
+.footer_contacts ul li {
+  display: flex;
+  flex-flow: row nowrap;
+  align-self: flex-start;
+}
+
+.footer_contact_item {
+  position: relative;
   color: var(--text-light);
   font-size: 16px;
   font-weight: 600;
   line-height: 150%;
+}
+
+a.footer_contact_item {  
   text-decoration-line: none;
 }
 
-.contact_link img {
+a.footer_contact_item::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  bottom: -4px;
+  background-color: var(--text-light);
+  left: 0%; 
+  opacity: 0;
+  transition: opacity 0.3s ease-in-out;
+}
+
+.footer_contact_item img {
   padding-right: 8px;
+}
+
+a.footer_contact_item:hover::after {
+  opacity: 1;
+}
+
+/* ---------- Menu page ---------- */
+
+.menu_container {
+  margin: 0px 40px;
 }
