--- a/coffee-house/styles/index.css
+++ b/coffee-house/styles/index.css
@@ -41,12 +41,18 @@ body {
 }
 
 .wrapper {
-  width: 1440px;
+  max-width: 1440px;
   min-height: 100%;
   margin: 0 auto;
   padding: 20px 40px 40px 40px;
   display: flex;
   flex-flow: column nowrap;
+}
+
+@media screen and (max-width: 730px) { 
+  .wrapper {
+    padding: 20px 16px 40px 16px;
+  }
 }
 
 .header_container {
@@ -227,6 +233,12 @@ h2 > span {
   font-family: Inter_SemiBold_Italic;
 }
 
+@media screen and (max-width: 730px) {
+  h2 {
+    font-size: 32px;
+  }
+}
+
 .favourite_carousel {
   display: flex;
   flex-flow: row nowrap;
@@ -380,8 +392,8 @@ h2 > span {
 }
 
 .mobile-app_image {
-  width: 630px;
-  height: 630px;
+  max-width: 630px;
+  max-height: 630px;
 }
 
 .mobile-app_offer {
@@ -389,7 +401,7 @@ h2 > span {
   flex-flow: column nowrap;
   gap: 40px;
   align-items: flex-start;
-  width: 630px;
+  max-width: 630px;
   text-align: left;
 }
 
@@ -459,12 +471,41 @@ h2 > span {
   fill: var(--text-light);
 }
 
+@media screen and (max-width: 1380px) {
+  .mobile-app {
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 100px;
+  }
+  .mobile-app_offer {
+    max-width: 100%;
+  }
+}
+
+@media screen and (max-width: 730px) {
+  .mobile-app {
+    gap: 40px;
+  }
+  .buy-app_buttons {
+    display: flex;
+    flex-flow: column nowrap;
+    align-items: flex-start;
+  }
+  .mobile-app_image {
+    max-width: 100%;
+    /*max-height: attr(max-width px);*/
+  }
+}
+
 /* ---------- Footer ---------- */
 
 .footer_container {
   display: flex;
   flex-flow: row nowrap;
   align-items: center;
+  justify-content: flex-start;
   gap: 100px;
   margin-top: 100px;
   padding: 100px;
@@ -478,8 +519,7 @@ h2 > span {
   flex-flow: column nowrap;
   align-items: flex-start;
   gap: 40px;
-  width: 530px;
-  justify-content: space-between;
+  max-width: 530px;
 }
 
 .footer_social-media h2 {
@@ -521,7 +561,7 @@ h2 > span {
   display: flex;
   flex-flow: column nowrap;
   align-items: flex-start;
-  gap: 40px;
+  flex-shrink: 0;
 }
 
 .footer_contacts h3 {
@@ -529,6 +569,7 @@ h2 > span {
   font-size: 24px;
   font-weight: 600;
   line-height: 125%;
+  padding-bottom: 40px;
 }
 
 .footer_contacts ul {
@@ -542,7 +583,7 @@ h2 > span {
   display: flex;
   flex-flow: row nowrap;
   align-self: flex-start;
-  padding-bottom: 4px;
+  padding-bottom: 2px;
 }
 
 .footer_contact_item {
@@ -553,7 +594,7 @@ h2 > span {
   line-height: 150%;
 }
 
-a.footer_contact_item {  
+a.footer_contact_item {
   text-decoration-line: none;
 }
 
@@ -575,6 +616,28 @@ a.footer_contact_item::after {
 
 a.footer_contact_item:hover::after {
   opacity: 1;
+}
+
+@media screen and (max-width: 1190px) {
+  .footer_container {
+    display: flex;
+    flex-flow: column nowrap;
+    align-items: flex-start;
+    gap: 100px;
+    padding: 100px 60px;
+  }
+  .footer_social-media {
+    max-width: 100%;
+  }
+}
+
+@media screen and (max-width: 730px) { 
+  .footer_container {
+    padding: 60px 16px;
+    flex-flow: column nowrap;
+    align-items: flex-start;
+    gap: 40px;
+  }
 }
 
 /* ---------- Menu page ---------- */
