--- a/coffee-house/styles/index.css
+++ b/coffee-house/styles/index.css
@@ -105,10 +105,6 @@ body {
   transition: opacity 0.3s ease-in-out;
 }
 
-.nav_list-item:hover::after {
-  opacity: 1;
-}
-
 .nav_menu-link.home_page {
   display: flex;
   align-items: flex-end;
@@ -135,10 +131,6 @@ body {
 
 .nav_menu-link img {
   margin-left: 8px;
-}
-
-.nav_menu-link.home_page:hover::after {
-  opacity: 1;
 }
 
 .burger-menu_button {
@@ -225,14 +217,6 @@ body {
   transition: opacity 0.5s ease-in-out;
 }
 
-.enjoy_button:hover > .enjoy_button-text {
-  transform: translateX(-14px);
-}
-
-.enjoy_button:hover > .enjoy_button-text::after {
-  opacity: 1;
-}
-
 @media screen and (max-width: 940px) {
   .enjoy {
     padding: 100px 60px;
@@ -302,18 +286,6 @@ h2 > span {
 
 .carousel_arrow svg path{
   transition: stroke 0.4s ease-in-out;
-}
-
-.carousel_arrow:hover {
-  cursor: pointer;
-}
-
-.carousel_arrow:hover > svg {
-  background-color: var(--background-container);
-}
-
-.carousel_arrow:hover > svg > path{
-  stroke: var(--text-light);
 }
 
 .carousel_slide {
@@ -444,11 +416,6 @@ h2 > span {
     height 0.3s ease-out;
 }
 
-.about_gallery_photo:hover > img {
-  width: 660px;
-  height: 660px;
-}
-
 @media screen and (max-width: 768px) {
   .about_gallery {
     display: flex;
@@ -464,10 +431,10 @@ h2 > span {
   .about_gallery_photo.photo_3 {
     display: none;
   }
-  .about_gallery_photo:hover > img {
+  /*.about_gallery_photo:hover > img {
     width: 688px;
     height: 688px;
-  }
+  }*/
 }
 
 /* ---------- Mobile App section ---------- */
@@ -555,18 +522,6 @@ h2 > span {
   line-height: 150%;
 }
 
-.buy-app_link:hover {
-  background-color: var(--background-container);
-}
-
-.buy-app_link:hover > .buy-app_link_text {
-  color: var(--text-light);
-}
-
-.buy-app_link:hover > svg > path {
-  fill: var(--text-light);
-}
-
 @media screen and (max-width: 1100px) {
   .mobile-app {
     display: flex;
@@ -641,16 +596,8 @@ h2 > span {
   transition: background-color 0.4s ease-in-out;
 }
 
-.footer_social-media_link:hover {
-  background-color: var(--background-body);
-}
-
 .footer_social-media_link svg path{
   transition: stroke 0.4s ease-in-out;
-}
-
-.footer_social-media_link:hover > svg > path {
-  stroke: var(--text-dark);
 }
 
 .footer_contacts {
@@ -711,10 +658,6 @@ a.footer_contact_item::after {
   padding-right: 8px;
 }
 
-a.footer_contact_item:hover::after {
-  opacity: 1;
-}
-
 @media screen and (max-width: 1190px) {
   .footer_container {
     display: flex;
@@ -740,10 +683,6 @@ a.footer_contact_item:hover::after {
 }
 
 /* ---------- Menu page ---------- */
-
-.menu_container {
-  margin: 0px 40px;
-}
 
 /* Header menu item on the main page is non-interactive */
 .nav_menu-link.menu_page {
@@ -772,6 +711,7 @@ a.footer_contact_item:hover::after {
   flex-flow: column nowrap;
   align-items: center;
   gap: 40px;
+  width: 100%;
 }
 
 .menu_container h1 {
@@ -827,57 +767,34 @@ a.footer_contact_item:hover::after {
   transition: background-color 0.4s ease-in-out;
 }
 
-.menu_button_item:hover {
-  cursor: pointer;
-  background-color: var(--background-container);
-  border-color: var(--background-container);
-}
-
-.menu_button_item:hover span {
-  color: var(--text-light);
-}
-
-.menu_button_item:hover img{
-  background-color: var(--background-body);
-}
-
 /* Active (chosen) button */
-.menu_button_item.active,
-.menu_button_item.active:hover {
+.menu_button_item.active {
   cursor: text;
   background-color: var(--background-container);
   border-color: var(--background-container);
 }
 
-.menu_button_item.active span,
-.menu_button_item.active:hover span {
+.menu_button_item.active span {
   color: var(--text-light);
 }
 
-.menu_button_item.active img,
-.menu_button_item.active:hover img {
+.menu_button_item.active img {
   background-color: var(--background-body);
 }
 
 .menu-items_container {
   display: flex;
-  flex-flow: column nowrap;
-  justify-content: space-between;
-  align-items: center;
-  gap: 40px;
-}
-
-.menu-items_row {
-  display: flex;
-  flex-flow: row nowrap;
+  flex-flow: row wrap;
   justify-content: center;
   align-items: center;
-  gap: 40px;
+  gap: 40px 40px;
+  width: 100%;
 }
 
 .menu_single-item_container {
   display: flex;
   flex-flow: column nowrap;
+  flex-shrink: 0;
   width: 310px;
   height: 506px;
   border-radius: 40px;
@@ -901,11 +818,6 @@ a.footer_contact_item:hover::after {
   height: 340px;
   transition: width 0.3s ease-out, 
     height 0.3s ease-out;
-}
-
-.menu_single-item_container:hover > .menu_single-item_photo-frame > img {
-  width: 310px;
-  height: 310px;
 }
 
 .menu_single-item_text {
@@ -937,4 +849,138 @@ a.footer_contact_item:hover::after {
   font-weight: 600;
   line-height: 125%;
   margin-top: auto;
+}
+
+.menu_preloader-button {
+  width: 60px;
+  height: 60px;
+  padding: 18px;
+  border: 1px solid var(--border-dark);
+  border-radius: 100px;
+  transition: background-color 0.4s ease-in-out;
+}
+
+.menu_preloader-button svg path{
+  transition: stroke 0.4s ease-in-out;
+}
+
+@media screen and (max-width: 768px) {
+  .menu_single-item_container.item5,
+  .menu_single-item_container.item6,
+  .menu_single-item_container.item7,
+  .menu_single-item_container.item8 {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 730px) {
+  .menu_container h1 {
+    font-size: 32px;
+    line-height: 125%;
+  }
+}
+
+@media screen and (max-width: 380px) {
+  .menu_buttons {
+    gap: 8px;
+  }
+}
+
+/* ---------- Hover effects ---------- */
+
+@media (hover: hover) and (pointer: fine) {
+  .nav_list-item:hover::after {
+    opacity: 1;
+  }
+  .nav_menu-link.home_page:hover::after {
+    opacity: 1;
+  }
+  .enjoy_button:hover > .enjoy_button-text {
+    transform: translateX(-14px);
+  }
+  .enjoy_button:hover > .enjoy_button-text::after {
+    opacity: 1;
+  }
+  .carousel_arrow:hover {
+    cursor: pointer;
+  }
+  .carousel_arrow:hover > svg {
+    background-color: var(--background-container);
+  }  
+  .carousel_arrow:hover > svg > path{
+    stroke: var(--text-light);
+  }
+  .about_gallery_photo:hover > img {
+    width: 660px;
+    height: 660px;
+  }
+  @media screen and (max-width: 768px) {
+    .about_gallery_photo:hover > img {
+      width: 688px;
+      height: 688px;
+    }
+  }
+  .buy-app_link:hover {
+    background-color: var(--background-container);
+  }  
+  .buy-app_link:hover > .buy-app_link_text {
+    color: var(--text-light);
+  }  
+  .buy-app_link:hover > svg > path {
+    fill: var(--text-light);
+  }
+  .footer_social-media_link:hover {
+    background-color: var(--background-body);
+  }
+  .footer_social-media_link:hover > svg > path {
+    stroke: var(--text-dark);
+  }
+  a.footer_contact_item:hover::after {
+    opacity: 1;
+  }
+  .menu_button_item:hover {
+    cursor: pointer;
+    background-color: var(--background-container);
+    border-color: var(--background-container);
+  }  
+  .menu_button_item:hover span {
+    color: var(--text-light);
+  }  
+  .menu_button_item:hover img{
+    background-color: var(--background-body);
+  }
+  .menu_button_item.active:hover {
+    cursor: text;
+    background-color: var(--background-container);
+    border-color: var(--background-container);
+  }
+  .menu_button_item.active:hover span {
+    color: var(--text-light);
+  }
+  .menu_button_item.active:hover img {
+    background-color: var(--background-body);
+  }
+  .menu_single-item_container:hover > .menu_single-item_photo-frame > img {
+    width: 310px;
+    height: 310px;
+  }
+  .menu_preloader-button:hover {
+    cursor: pointer;
+  }  
+  .menu_preloader-button:hover {
+    background-color: var(--background-container);
+  }  
+  .menu_preloader-button:hover > svg > path{
+    stroke: var(--text-light);
+  }
+}
+
+@media (hover: none) or (pointer: coarse) or (pointer: none) {
+  /* Menu button in the Enjoy section on touchscreen devices */
+  .enjoy_button-text {
+    transform: translateX(-14px);
+  }
+  .enjoy_button-text::after {
+    opacity: 1;
+  }
 }
